[package]
name = "trading_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
ethers = { version = "2.0", features = ["abigen", "ws"] }
hex = "0.4"
once_cell = "1.19"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.8", features = ["serde", "v4"] }
